fixed mobile nav alignment on chrome

--- a/css/main.css
+++ b/css/main.css
@@ -823,7 +823,7 @@ p.categories-list{
     cursor: pointer;
 }
 .mobileNav .toggleMenu{
-    justify-content: right;
+    justify-content: flex-end;
     display: flex;
 }
 
